# alkitab-api-v3

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  find-test.js  read_test.js
.github/workflows/: rust.yml
.shuttle/: config.toml
config/: default.toml  production.toml
src/: api_docs.rs  config.rs  error.rs  lib.rs  main.rs
src/controllers/: bible.rs  mod.rs
src/middleware/: auth.rs
src/models/: bible.rs  book_translations.rs  mod.rs
src/routes/: bible.rs
src/services/: bible.rs  mod.rs
tests/: bible_service_test.rs
