[package]
name = "alkitab-api-rust"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10", features = ["rustls"] }
actix-cors = "0.7.1"
dotenv = "0.15"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "stream"] }
scraper = "0.23.1"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.8"
thiserror = "2.0.12"
config = "0.15.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }