[package]
name = "alkitab-api-rust"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10", features = ["rustls"] }
shuttle-actix-web = "0.56"
shuttle-runtime = "0.56"
actix-cors = "0.7.1"
dotenv = "0.15"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "stream"] }
scraper = "0.23.1"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.8"
thiserror = "2.0.12"
config = "0.15.11"
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.0", features = ["actix-web"] }
once_cell = "1.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }